--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
 langchain
-langchain-openai
-langchain-community
-langchain-core
+langchain_community
+langchain_core
+langchain_openai
 python-dotenv
+openai
+streamlit-mermaid
