--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
 langchain
 langchain-openai
 langchain-community
 python-dotenv
-streamlit-mermaid
 PyPDF2
 pytesseract
 pdf2image
 Pillow
+streamlit==1.46.0
+streamlit-mermaid==0.3.0
